--- a/app/src/main/res/layout/list_header_preset_password_configuration.xml
+++ b/app/src/main/res/layout/list_header_preset_password_configuration.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+    android:layout_height="wrap_content">
+
     <android.support.v7.widget.CardView
         xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
         android:id="@+id/cardView_preset_password_configuration"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -47,74 +47,50 @@
             </LinearLayout>
 
             <View
+                android:id="@+id/view_PresetPasswordSettingsDividerHeader"
                 android:layout_width="match_parent"
                 android:layout_height="0.2dp"
                 android:background="@color/colorCardDivider" />
 
-
-            <android.support.constraint.ConstraintLayout
+            <LinearLayout
                 android:id="@+id/constraintLayout_settings_content"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent">
+                android:layout_height="match_parent"
+                android:orientation="vertical">
 
-                <TextView
-                    android:id="@+id/textView_password_type_title"
-                    android:layout_width="0dp"
+                <ViewStub
+                    android:id="@+id/viewStub_additional_settings"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="8dp"
                     android:layout_marginRight="8dp"
                     android:layout_marginTop="8dp"
-                    android:text="@string/activity_preset_password_generation_password_type"
-                    android:textColor="?android:textColorSecondary"
-                    app:layout_constraintLeft_toLeftOf="parent"
-                    app:layout_constraintRight_toRightOf="parent"
-                    app:layout_constraintTop_toTopOf="parent"
-                    android:layout_marginStart="8dp"
-                    android:layout_marginEnd="8dp" />
-
-                <Spinner
-                    android:id="@+id/spinner_password_type"
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="8dp"
-                    android:layout_marginRight="8dp"
-                    android:layout_marginTop="8dp"
-                    android:entries="@array/password_types"
-                    app:layout_constraintLeft_toLeftOf="parent"
-                    app:layout_constraintRight_toRightOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/textView_password_type_title"
                     android:layout_marginStart="8dp"
                     android:layout_marginEnd="8dp" />
 
                 <TextView
                     android:id="@+id/textView_password_length_title"
-                    android:layout_width="0dp"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:layout_marginTop="16dp"
                     android:layout_marginLeft="8dp"
                     android:layout_marginRight="8dp"
-                    android:layout_marginTop="16dp"
                     android:text="@string/activity_preset_password_generation_password_length"
                     android:textColor="?android:textColorSecondary"
-                    app:layout_constraintLeft_toLeftOf="parent"
-                    app:layout_constraintRight_toRightOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/spinner_password_type"
                     android:layout_marginStart="8dp"
                     android:layout_marginEnd="8dp" />
 
+
                 <LinearLayout
                     android:id="@+id/linearLayout_password_length"
-                    android:layout_width="0dp"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginEnd="8dp"
                     android:layout_marginLeft="8dp"
                     android:layout_marginRight="8dp"
                     android:layout_marginStart="8dp"
                     android:layout_marginTop="8dp"
-                    android:gravity="center_vertical"
-                    android:orientation="horizontal"
-                    app:layout_constraintLeft_toLeftOf="parent"
-                    app:layout_constraintRight_toRightOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/textView_password_length_title">
+                    android:orientation="horizontal">
 
                     <SeekBar
                         android:id="@+id/seekBar_password_length"
@@ -129,39 +105,34 @@
                         android:textColor="?android:textColorSecondary"
                         android:layout_width="40dp"
                         android:layout_height="wrap_content"
-                        android:layout_gravity="end"
-                        android:textAlignment="textEnd" />
+                        android:gravity="end"
+                        android:textAlignment="textEnd"
+                        android:layout_marginRight="8dp"
+                        android:layout_marginEnd="8dp"/>
                 </LinearLayout>
 
                 <TextView
                     android:id="@+id/textView_number_of_passwords_title"
-                    android:layout_width="0dp"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="8dp"
                     android:layout_marginRight="8dp"
-                    android:layout_marginTop="8dp"
+                    android:layout_marginTop="16dp"
                     android:text="@string/activity_preset_password_generation_number_of_passwords"
                     android:textColor="?android:textColorSecondary"
-                    app:layout_constraintLeft_toLeftOf="parent"
-                    app:layout_constraintRight_toRightOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/linearLayout_password_length"
                     android:layout_marginStart="8dp"
                     android:layout_marginEnd="8dp" />
 
                 <LinearLayout
                     android:id="@+id/linearLayout_number_of_passwords"
-                    android:layout_width="0dp"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginEnd="8dp"
                     android:layout_marginLeft="8dp"
                     android:layout_marginRight="8dp"
                     android:layout_marginStart="8dp"
                     android:layout_marginTop="8dp"
-                    android:gravity="center_vertical"
-                    android:orientation="horizontal"
-                    app:layout_constraintLeft_toLeftOf="parent"
-                    app:layout_constraintRight_toRightOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/textView_number_of_passwords_title">
+                    android:orientation="horizontal">
 
                     <SeekBar
                         android:id="@+id/seekBar_number_of_passwords"
@@ -176,28 +147,24 @@
                         android:textColor="?android:textColorSecondary"
                         android:layout_width="40dp"
                         android:layout_height="wrap_content"
-                        android:layout_gravity="end"
-                        android:textAlignment="textEnd" />
+                        android:gravity="end"
+                        android:textAlignment="textEnd"
+                        android:layout_marginRight="8dp"
+                        android:layout_marginEnd="8dp"/>
                 </LinearLayout>
 
                 <Button
                     android:id="@+id/button_generate_password"
-                    android:layout_width="0dp"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:layout_marginBottom="8dp"
+                    android:layout_marginEnd="8dp"
                     android:layout_marginLeft="8dp"
                     android:layout_marginRight="8dp"
-                    android:text="@string/activity_preset_password_generation_password_generate"
-                    app:layout_constraintTop_toBottomOf="@+id/linearLayout_number_of_passwords"
-                    app:layout_constraintLeft_toLeftOf="parent"
-                    app:layout_constraintRight_toRightOf="parent"
-                    app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintHorizontal_bias="0.0"
-                    android:layout_marginBottom="8dp"
                     android:layout_marginStart="8dp"
-                    android:layout_marginEnd="8dp"
                     android:layout_marginTop="16dp"
-                    app:layout_constraintVertical_bias="0.0" />
-            </android.support.constraint.ConstraintLayout>
+                    android:text="@string/activity_preset_password_generation_password_generate" />
+            </LinearLayout>
         </LinearLayout>
     </android.support.v7.widget.CardView>
 </LinearLayout>
