--- a/app/src/main/res/layout/additional_settings_custom_password_generation.xml
+++ b/app/src/main/res/layout/additional_settings_custom_password_generation.xml
@@ -4,8 +4,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    app:columnCount="2"
-    app:rowCount="2">
+    app:columnCount="2">
 
     <!-- Prefix -->
     <TextView
