--- a/app/src/main/res/layout/list_item_generated_password.xml
+++ b/app/src/main/res/layout/list_item_generated_password.xml
@@ -15,8 +15,7 @@
             android:layout_height="match_parent"
             android:gravity="center_vertical"
             android:orientation="horizontal"
-            android:paddingTop="8dp"
-            android:paddingBottom="8dp">
+            android:padding="2dp">
 
             <TextView
                 android:id="@+id/textView_password"
@@ -24,21 +23,23 @@
                 android:layout_height="wrap_content"
                 android:layout_margin="8dp"
                 android:layout_weight="1"
-                android:textAlignment="center"
+                android:gravity="start"
+                android:textAlignment="textStart"
                 android:textSize="18sp" />
-
-            <de.framersoft.easypasswordgenerator.view.ratingBar.RatingBarView
-                android:id="@+id/ratingBarView_password_rating"
-                android:layout_width="8dp"
-                android:layout_height="match_parent" />
 
             <ImageButton
                 android:id="@+id/imageButton_copy_to_clipboard"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_margin="8dp"
+                android:scaleType="fitCenter"
                 android:contentDescription="@string/content_description_copy_to_clipboard"
                 android:src="@drawable/ic_content_copy_black_24dp" />
+
+            <de.framersoft.easypasswordgenerator.view.ratingBar.RatingBarView
+                android:id="@+id/ratingBarView_password_rating"
+                android:layout_width="8dp"
+                android:layout_height="match_parent"
+                android:layout_margin="6dp"/>
         </LinearLayout>
     </android.support.v7.widget.CardView>
 </LinearLayout>
